--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -7,10 +7,13 @@ environment:
   sdk: ^3.5.4
 
 dependencies:
+  cloud_firestore: ^5.5.1
+  firebase_core: ^3.8.1
   flutter:
     sdk: flutter
   flutter_riverpod: ^2.6.1
   google_fonts: ^6.2.1
+  http: ^1.2.2
 
 dev_dependencies:
   flutter_test:
